2004-06-20  Richard Henderson  <rth@redhat.com>

	* c-common.def (IF_STMT, CLEANUP_STMT): Move to cp-tree.def.
	* c-common.h (IF_COND, THEN_CLAUSE, ELSE_CLAUSE, CLEANUP_BODY,
	CLEANUP_EXPR, CLEANUP_DECL): Move to cp-tree.h.
	(c_common_stmt_codes): Remove IF_STMT, CLEANUP_STMT.
	* c-dump.c (c_dump_tree): Move IF_STMT, CLEANUP_STMT to cp_dump_tree.
	* c-pretty-print.c (pp_c_statement): Similarly.
	* c-gimplify.c (gimplify_cleanup_stmt, gimplify_cleanup_stmts,
	gimplify_if_stmt): Move to cp-gimplify.c.
	(c_genericize, c_gimplify_expr): Don't call them.
	* c-semantics.c (push_cleanup): Move to cp/semantics.c.
	* c-typeck.c (push_cleanup): New.
	(c_begin_if_stmt, c_finish_if_cond, c_finish_then, c_finish_else,
	c_finish_if_stmt): Use COND_EXPR.
	* tree.h (CLEANUP_EH_ONLY): Update documentation.

2004-06-20  Zack Weinberg  <zack@codesourcery.com>

	* c-common.h (has_c_linkage): New interface.
	* c-cppbuiltin.c: Include target.h.
	(c_cpp_builtins): Define __PRAGMA_REDEFINE_EXTNAME and
	__PRAGMA_EXTERN_PREFIX when appropriate.
	* c-pragma.c: Include target.h.
	Document clarified semantics of symbol-renaming #pragmas.
	(handle_pragma_redefine_extname, handle_pragma_extern_prefix)
	(maybe_apply_renaming_pragma): Rewrite according to clarified
	semantics.  Always recognize, but do not necessarily execute.
	(init_pragma): Unconditionally register symbol-renaming pragmas.
	* system.h: Poison HANDLE_PRAGMA_REDEFINE_EXTNAME
	and HANDLE_PRAGMA_EXTERN_PREFIX.
	* target.h (struct gcc_target): Add handle_pragma_redefine_extname
	and handle_pragma_extern_prefix flags.
	* target-def.h: Add defaults for TARGET_HANDLE_PRAGMA_REDEFINE_EXTNAME
	and TARGET_HANDLE_PRAGMA_EXTERN_PREFIX.
	* Makefile.in (c-pragma.o, c-cppbuiltin.o): Update dependencies.
	* config/sol2.h: Define TARGET_HANDLE_PRAGMA_REDEFINE_EXTNAME,
	not HANDLE_PRAGMA_REDEFINE_EXTNAME.
	(TARGET_OS_CPP_BUILTINS): No need to define __PRAGMA_REDEFINE_EXTNAME.
	(TRANSFER_FROM_TRAMPOLINE): Prototype mprotect.