@@ -1540,7 +1540,7 @@ nested_function:
 		  add_stmt ($6);
 		  finish_function ();
 		  pop_function_context ();
-		  add_decl_stmt (decl); }
+		  add_stmt (build_stmt (DECL_STMT, decl)); }
 	;
 
 notype_nested_function:
@@ -1570,7 +1570,7 @@ notype_nested_function:
 		  add_stmt ($6);
 		  finish_function ();
 		  pop_function_context ();
-		  add_decl_stmt (decl); }
+		  add_stmt (build_stmt (DECL_STMT, decl)); }
 	;
 
 /* Any kind of declarator (thus, all declarators allowed
@@ -2019,7 +2019,7 @@ label_decl:
 		    {
 		      tree label = declare_label (TREE_VALUE (link));
 		      C_DECLARED_LABEL_FLAG (label) = 1;
-		      add_decl_stmt (label);
+		      add_stmt (build_stmt (DECL_STMT, label));
 		    }
 		}
 	;
